src/tailwind.css
/* ... */
.w-1\/2{
  width: 50%;
}

.w-\[0\.5px\]{
  width: 0.5px;
}

.w-\[80lvw\]{
  width: 80lvw;
}

.w-\[80vw\]{
  width: 80vw;
}

.w-\[max\(20lvh\2c 20lvw\)\]{
  width: max(20lvh,20lvw);
}

.w-\[min\(20lvw\2c 83px\)\]{
  width: min(20lvw,83px);
}

.w-full{
  width: 100%;
}

.w-screen{
  width: 100vw;
}

.-rotate-90{
  --tw-rotate: -90deg;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.flex-col{
  flex-direction: column;
}

.items-end{
  align-items: flex-end;
}

.items-center{
  align-items: center;
}

.items-stretch{
  align-items: stretch;
}

.justify-center{
  justify-content: center;
}

.justify-between{
  justify-content: space-between;
}

.justify-around{
  justify-content: space-around;
}

.gap-10{
  gap: 2.5rem;
}

.gap-5{
  gap: 1.25rem;
}

.rounded-full{
  border-radius: 9999px;
}

.rounded-md{
  border-radius: 0.375rem;
}

.bg-dark{
  --tw-bg-opacity: 1;
  background-color: rgb(18 18 18 / var(--tw-bg-opacity, 1));
}

.bg-primary{
  --tw-bg-opacity: 1;
  background-color: rgb(240 224 188 / var(--tw-bg-opacity, 1));
}

.bg-secondary{
  --tw-bg-opacity: 1;
  background-color: rgb(40 40 43 / var(--tw-bg-opacity, 1));
}

.p-1{
  padding: 0.25rem;
}

.p-2{
  padding: 0.5rem;
}

.px-2{
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.pl-\[10lvw\]{
  padding-left: 10lvw;
}

.ps-32{
  padding-inline-start: 8rem;
}

.pt-5{
  padding-top: 1.25rem;
}

.text-center{
  text-align: center;
}

.font-1{
  font-family: Raleway, ui-sans-serif, system-ui, sans-serif;
}

.font-2{
  font-family: Montserrat, ui-sans-serif, system-ui, sans-serif;
}

.text-2xl{
  font-size: 1.5rem;
  line-height: 2rem;
}

.text-6xl{
  font-size: 3.75rem;
  line-height: 1;
}

.text-\[22vw\]{
  font-size: 22vw;
}

.text-\[2vw\]{
  font-size: 2vw;
}

.font-black{
  font-weight: 900;
}

.font-extralight{
  font-weight: 200;
}

.font-light{
  font-weight: 300;
}

.text-light{
  --tw-text-opacity: 1;
  color: rgb(248 250 252 / var(--tw-text-opacity, 1));
}

.text-primary{
  --tw-text-opacity: 1;
  color: rgb(240 224 188 / var(--tw-text-opacity, 1));
}

.opacity-20{
  opacity: 0.2;
}

.opacity-50{
  opacity: 0.5;
}

.shadow-2xl{
  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

@theme {
  --font-general: "Raleway", "ui-sans-serif", "system-ui", "sans-serif";
}

@media (min-width: 640px){
  .sm\:ml-\[10lvw\]{
    margin-left: 10lvw;
  }

  .sm\:text-xl{
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 768px){
  .md\:left-\[10lvw\]{
    left: 10lvw;
  }

  .md\:ml-\[50lvw\]{
    margin-left: 50lvw;
  }

  .md\:ml-\[10lvw\]{
    margin-left: 10lvw;
  }

  .md\:w-\[40lvw\]{
    width: 40lvw;
  }

  .md\:w-\[80lvw\]{
    width: 80lvw;
  }
}

@media (min-width: 1024px){
  .lg\:left-\[50lvw\]{
    left: 50lvw;
  }

  .lg\:ml-\[50lvw\]{
    margin-left: 50lvw;
  }

  .lg\:w-\[40lvw\]{
    width: 40lvw;
  }
}

